# P16_ASTRA

./: .env.ejemplo.prod  .gitignore  AGENTS.md  claude.md  criterios-chatbot.md  docker-compose.prod.yml  readme-backend.md
backend/: .dockerignore  .env  .env.ejemplo  .gitignore  =2.1  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_tablas_iniciales.py  002_perfil_id_nullable.py  003_crear_tabla_usuarios.py  004_agregar_usuario_id_a_perfiles.py  005_crear_tablas_suscripciones.py  006_crear_tabla_facturas.py  007_vinculos_telegram.py  008_podcast_episodios.py  009_chat_web.py  010_transitos_diarios.py  011_eventos_transitos.py  012_admin_backoffice.py  013_chat_gestion_conversaciones.py  014_podcast_preview_manana.py  015_podcast_acciones_json.py
backend/app/: bot_main.py  configuracion.py  configuracion_features.py  dependencias.py  dependencias_admin.py  dependencias_auth.py  dependencias_suscripcion.py  excepciones.py  principal.py  registro.py
backend/app/cache/: gestor_cache.py
backend/app/datos/: repositorio_calculo.py  repositorio_conversacion.py  repositorio_factura.py  repositorio_pago.py  repositorio_perfil.py  repositorio_plan.py  repositorio_podcast.py  repositorio_suscripcion.py  repositorio_telegram.py  repositorio_transito.py  repositorio_usuario.py  sesion.py
backend/app/datos_estaticos/: canales.json  puertas_centros.json  tabla_iching.json
backend/app/email_templates/: base.html  bienvenida.html  codigo_otp.html  cuenta_eliminada.html  cuenta_verificada.html  expiracion_gracia.html  pago_rechazado.html  podcast_listo.html  reset_password.html  suscripcion_activa.html  suscripcion_cancelada.html  verificacion_cuenta.html
backend/app/esquemas/: auth.py  calendario_cosmico.py  diseno_humano.py  entrada.py  natal.py  numerologia.py  perlas.py  pronostico.py  respuesta.py  retorno_solar.py  suscripcion.py  transitos.py
backend/app/middleware/: tiempo_respuesta.py
backend/app/modelos/: __init__.py  base.py  calculo.py  config_pais_mp.py  conversacion_oraculo.py  (+12 more)
backend/cosmic_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: backfill_eventos.py  cargar_transitos.py  iniciar_bot.sh  levantar.sh
backend/tests/: conftest.py  test_app_startup.py  test_flujo_suscripcion.py
(+507 files in other folders)
