[project]
name = "cosmic-engine"
version = "1.0.0"
description = "Plataforma de cálculo esotérico-astronómico"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pyswisseph>=2.10.3.2",
    "kerykeion>=4.14",
    "geopy[aiohttp]>=2.4",
    "timezonefinder>=6.4",
    "pytz>=2024.1",
    "redis[hiredis]>=5.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "PyJWT[crypto]>=2.8",
    "bcrypt>=4.0",
    "python-multipart>=0.0.6",
    "authlib>=1.3",
    "email-validator>=2.1",
    "mercadopago>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "ruff>=0.3",
]
scripts = [
    "rich>=13.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100
